modification de la couleur

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
-<body style="background-color:#fefefe">
+<body style="background-color:#cccccc">
 
-<h1 style="text-align:center">This is a Git</h1>
+<h1 style="text-align:center;color:#f4f4f4">This is a Git</h1>
 <p>Git is so cool</p>
 
 </body>
