changement du background

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
-<body style="background-color:#cccccc">
+<body style="background-color:#f6b93b">
 
 <h1 style="text-align:center;color:#f4f4f4">This is a Git</h1>
 <p>Git is so cool</p>
